WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301379
Fix linker error after
301955@main
https://bugs.webkit.org/show_bug.cgi?id=301379
Summary
Fix linker error after 301955@main
daniel_liu4
Reported
2025-10-23 15:12:58 PDT
Due to a C++ function being outside of `PAS_END_EXTERN_C`, we had linker errors on some platforms.
rdar://163296334
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-10-23 15:14:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52910
EWS
Comment 2
2025-10-23 15:26:36 PDT
Committed
302058@main
(a2df44f5ef25): <
https://commits.webkit.org/302058@main
> Reviewed commits have been landed. Closing PR #52910 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug