Fix linker error after 301955@main https://bugs.webkit.org/show_bug.cgi?id=301379 rdar://163296334

Unreviewed, build fix.

`pas_mar_is_address_in_qualifying_page` needs to be wrapped within the
`PAS_EXTERN_C` to ensure that it is exported properly.

Canonical link: https://commits.webkit.org/302058@main